Changing service type declaration to explicit terms instead of mode shifting

--- a/stable/redis-ha/templates/redis-slave-appliance-vpc.yaml
+++ b/stable/redis-ha/templates/redis-slave-appliance-vpc.yaml
@@ -14,8 +14,4 @@ spec:
     redis-node: "true"
     redis-role: "slave"
     release: "{{ .Release.Name }}"
-{{- if eq .Values.appliance.vpcMode true }}
-  type: LoadBalancer
-{{- else }}
-  type: ClusterIP
-{{- end }}
+  type: "{{ .Values.appliance.serviceType }}"
