--- a/stable/redis-ha/templates/redis-slave-service.yaml
+++ b/stable/redis-ha/templates/redis-slave-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-master-appliance-vpc
+  name: {{ template "fullname" . }}-slave-appliance-svc
   annotations:
 {{ toYaml .Values.appliance.annotations | indent 4 }}
 spec:
@@ -12,6 +12,6 @@ spec:
   selector:
     app: "redis-ha"
     redis-node: "true"
-    redis-role: "master"
+    redis-role: "slave"
     release: "{{ .Release.Name }}"
   type: "{{ .Values.appliance.serviceType }}"
