--- a/stable/redis-ha/values.yaml
+++ b/stable/redis-ha/values.yaml
@@ -66,7 +66,5 @@ replicas:
   servers: 3
   sentinels: 3
 appliance:
-  serviceType: ClusterIP #Restricts access to within the K8S cluster
-#  serviceType: LoadBalancer #Allows access to the local VPC
+  serviceType: ClusterIP  # [ClusterIP|LoadBalancer]
   annotations:
-    cloud.google.com/load-balancer-type: "Internal"
