--- a/incubator/litecoind/templates/pvc.yaml
+++ b/incubator/litecoind/templates/pvc.yaml
@@ -3,6 +3,8 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ template "litecoind.fullname" . }}
+  annotations:
+    "helm.sh/resource-policy": keep
   labels:
     app: {{ template "litecoind.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
