--- a/stable/redis-ha/values.yaml
+++ b/stable/redis-ha/values.yaml
@@ -60,11 +60,12 @@ persistentVolume:
   ##
   subPath: ""
 ## Redis image version
-redis_image: quay.io/ianmaddox/redis-sentinel:redis-4.0.6r0
+redis_image: quay.io/smile/redis:4.0.6r1
 ## replicas number for each component
 replicas:
   servers: 3
   sentinels: 3
-appliance:
+servers:
   serviceType: ClusterIP  # [ClusterIP|LoadBalancer]
   annotations:
+sentinels:
