--- a/incubator/ibm-blockchain-network/templates/blockchain-services.yaml
+++ b/incubator/ibm-blockchain-network/templates/blockchain-services.yaml
@@ -2,13 +2,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: blockchain-ca
+  name: {{ template "ibm-blockchain-network.name" . }}-ca
   labels:
-    run: blockchain-ca
+    app: {{ template "ibm-blockchain-network.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    run: {{ template "ibm-blockchain-network.name" . }}-ca
 spec:
   type: NodePort
   selector:
-    name: ca
+    name: {{ template "ibm-blockchain-network.name" . }}-ca
     app: {{ template "ibm-blockchain-network.name" . }}
     release: {{ .Release.Name }}
   ports:
@@ -20,13 +24,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: blockchain-orderer
+  name: {{ template "ibm-blockchain-network.name" . }}-orderer
   labels:
-    run: blockchain-orderer
+    app: {{ template "ibm-blockchain-network.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    run: {{ template "ibm-blockchain-network.name" . }}-orderer
 spec:
   type: NodePort
   selector:
-    name: orderer
+    name: {{ template "ibm-blockchain-network.name" . }}-orderer
     app: {{ template "ibm-blockchain-network.name" . }}
     release: {{ .Release.Name }}
   ports:
@@ -38,13 +46,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: blockchain-org1peer1
+  name: {{ template "ibm-blockchain-network.name" . }}-org1peer1
   labels:
-    run: blockchain-org1peer1
+    app: {{ template "ibm-blockchain-network.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    run: {{ template "ibm-blockchain-network.name" . }}-org1peer1
 spec:
   type: NodePort
   selector:
-    name: org1peer1
+    name: {{ template "ibm-blockchain-network.name" . }}-org1peer1
     app: {{ template "ibm-blockchain-network.name" . }}
     release: {{ .Release.Name }}
   ports:
@@ -60,13 +72,17 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: blockchain-org2peer1
+  name: {{ template "ibm-blockchain-network.name" . }}-org2peer1
   labels:
-    run: blockchain-org2peer1
+    app: {{ template "ibm-blockchain-network.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    run: {{ template "ibm-blockchain-network.name" . }}-org2peer1
 spec:
   type: NodePort
   selector:
-    name: org2peer1
+    name: {{ template "ibm-blockchain-network.name" . }}-org2peer1
     app: {{ template "ibm-blockchain-network.name" . }}
     release: {{ .Release.Name }}
   ports:
