--- a/incubator/ibm-blockchain-channel/templates/create_channel.yaml
+++ b/incubator/ibm-blockchain-channel/templates/create_channel.yaml
@@ -2,31 +2,36 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: createchannel
+  name: {{ template "ibm-blockchain-channel.fullname" . }}-create
+  labels:
+    app: {{ template "ibm-blockchain-channel.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   restartPolicy: "Never"
   volumes:
-  - name: shared
+  - name: {{ template "ibm-blockchain-shared-pvc.name" . }}
     persistentVolumeClaim:
-     claimName: shared
+     claimName: {{ template "ibm-blockchain-shared-pvc.name" . }}
 
   containers:
   - name: createchanneltx
     image: {{ .Values.blockchain.toolsImage }}
     imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
-    command: 
+    command:
       - sh
       - -c
       - |
-        cd /shared 
-        pwd 
-        ls 
+        cd /shared
+        pwd
+        ls
 
         while [ ! -f /shared/status_org1peer1_complete ] || [ ! -f /shared/status_org2peer1_complete ] || [ ! -f /shared/status_fabricca_complete ] || [ ! -f /shared/status_orderer_complete ]; do
           echo Waiting for peers
           sleep 1
         done
-        
+
         configtxgen -profile TwoOrgsChannel -outputCreateChannelTx ${CHANNEL_NAME}.tx -channelID ${CHANNEL_NAME} &&
         touch /shared/status_channeltx_complete &&
         rm -f /shared/status_org1peer1_complete /shared/status_org2peer1_complete
@@ -39,7 +44,7 @@ spec:
       value: "netdns=go"
     volumeMounts:
     - mountPath: /shared
-      name: shared
+      name: {{ template "ibm-blockchain-shared-pvc.name" . }}
 
   - name: createchannel
     image: {{ .Values.blockchain.peerImage }}
@@ -52,7 +57,7 @@ spec:
           echo Waiting for channeltx
           sleep 2
         done
-        
+
         peer channel create -o ${ORDERER_URL} -c ${CHANNEL_NAME} -f /shared/${CHANNEL_NAME}.tx &&
         rm -f /shared/status_channeltx_complete &&
         touch /shared/status_channelcreate_complete
@@ -60,7 +65,7 @@ spec:
     - name: CHANNEL_NAME
       value: {{ .Values.blockchain.channelName }}
     - name: ORDERER_URL
-      value: blockchain-orderer:31010
+      value: {{ template "ibm-blockchain-network.name" . }}-orderer:31010
     - name: CORE_PEER_ADDRESSAUTODETECT
       value: "false"
     - name: CORE_PEER_NETWORKID
@@ -77,4 +82,4 @@ spec:
       value: "netdns=go"
     volumeMounts:
     - mountPath: /shared
-      name: shared
+      name: {{ template "ibm-blockchain-shared-pvc.name" . }}
