--- a/incubator/ibm-blockchain-channel/templates/join_channel_org1peer1.yaml
+++ b/incubator/ibm-blockchain-channel/templates/join_channel_org1peer1.yaml
@@ -2,19 +2,24 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: joinchannel-org1peer1
+  name: {{ template "ibm-blockchain-channel.fullname" . }}-join-org1peer1
+  labels:
+    app: {{ template "ibm-blockchain-channel.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   restartPolicy: "Never"
   volumes:
-  - name: shared
+  - name: {{ template "ibm-blockchain-shared-pvc.name" . }}
     persistentVolumeClaim:
-     claimName: shared
+     claimName: {{ template "ibm-blockchain-shared-pvc.name" . }}
 
   containers:
   - name: joinchannel-org1peer1
     image: {{ .Values.blockchain.peerImage }}
     imagePullPolicy: {{ .Values.blockchain.pullPolicy }}
-    command: 
+    command:
       - sh
       - -c
       - |
@@ -22,7 +27,7 @@ spec:
           echo Waiting for createchannel
           sleep 2
         done
-        
+
         peer channel fetch newest -o ${ORDERER_URL} -c ${CHANNEL_NAME} &&
         peer channel join -b ${CHANNEL_NAME}_newest.block &&
         touch /shared/status_joinchannel_org1peer1_complete
@@ -32,9 +37,9 @@ spec:
     - name: CORE_PEER_NETWORKID
       value: nid1
     - name: ORDERER_URL
-      value: blockchain-orderer:31010
+      value: {{ template "ibm-blockchain-network.name" . }}-orderer:31010
     - name: CORE_PEER_ADDRESS
-      value: blockchain-org1peer1:5010
+      value: {{ template "ibm-blockchain-network.name" . }}-org1peer1:5010
     - name: CORE_PEER_LOCALMSPID
       value: Org1MSP
     - name: CORE_LOGGING_LEVEL
@@ -47,4 +52,4 @@ spec:
       value: "netdns=go"
     volumeMounts:
     - mountPath: /shared
-      name: shared
+      name: {{ template "ibm-blockchain-shared-pvc.name" . }}
