--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org1peer1.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_install_org1peer1.yaml
@@ -2,13 +2,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: chaincodeinstall-org1peer1
+  name: {{ template "ibm-blockchain-chaincode.fullname" . }}-install-org1peer1
+  labels:
+    app: {{ template "ibm-blockchain-chaincode.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   restartPolicy: "Never"
   volumes:
-  - name: shared
+  - name: {{ template "ibm-blockchain-shared-pvc.name" . }}
     persistentVolumeClaim:
-     claimName: shared
+     claimName: {{ template "ibm-blockchain-shared-pvc.name" . }}
 
   containers:
   - name: chaincodeinstall-org1peer1
@@ -38,9 +43,9 @@ spec:
     - name: CORE_PEER_LOCALMSPID
       value: Org1MSP
     - name: CORE_PEER_ADDRESS
-      value: blockchain-org1peer1:5010
+      value: {{ template "ibm-blockchain-network.name" . }}-org1peer1:5010
     - name: GODEBUG
       value: "netdns=go"
     volumeMounts:
     - mountPath: /shared
-      name: shared
+      name: {{ template "ibm-blockchain-shared-pvc.name" . }}
