--- a/incubator/ibm-blockchain-chaincode/templates/chaincode_instantiate.yaml
+++ b/incubator/ibm-blockchain-chaincode/templates/chaincode_instantiate.yaml
@@ -2,13 +2,18 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: chaincodeinstantiate
+  name: {{ template "ibm-blockchain-chaincode.fullname" . }}-instantiate
+  labels:
+    app: {{ template "ibm-blockchain-chaincode.name" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
 spec:
   restartPolicy: "Never"
   volumes:
-  - name: shared
+  - name: {{ template "ibm-blockchain-shared-pvc.name" . }}
     persistentVolumeClaim:
-     claimName: shared
+     claimName: {{ template "ibm-blockchain-shared-pvc.name" . }}
 
   containers:
   - name: chaincodeinstantiate
@@ -23,7 +28,7 @@ spec:
           sleep 2
         done
 
-        peer chaincode instantiate -o blockchain-orderer:31010 -C ${CHANNEL_NAME} -n ${CHAINCODE_NAME} -v ${CHAINCODE_VERSION} -c '{\"Args\":[\"init\",\"a\",\"100\",\"b\",\"200\"]}' &&
+        peer chaincode instantiate -o {{ template "ibm-blockchain-network.name" . }}-orderer:31010 -C ${CHANNEL_NAME} -n ${CHAINCODE_NAME} -v ${CHAINCODE_VERSION} -c '{\"Args\":[\"init\",\"a\",\"100\",\"b\",\"200\"]}' &&
         touch /shared/status_chaincodeinstantiate_complete &&
         rm -f /shared/status_chaincodeinstall_*_complete
     env:
@@ -40,9 +45,9 @@ spec:
     - name: CORE_PEER_LOCALMSPID
       value: Org1MSP
     - name: CORE_PEER_ADDRESS
-      value: blockchain-org1peer1:5010
+      value: {{ template "ibm-blockchain-network.name" . }}-org1peer1:5010
     - name: GODEBUG
       value: "netdns=go"
     volumeMounts:
     - mountPath: /shared
-      name: shared
+      name: {{ template "ibm-blockchain-shared-pvc.name" . }}
