--- a/incubator/logstash/values.yaml
+++ b/incubator/logstash/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 replicaCount: 1
+nodeSelector: {}
 image:
   repository: docker.elastic.co/logstash/logstash-oss
   tag: 6.0.0
