Changed service.type to ClusterIP by default

--- a/incubator/logstash/values.yaml
+++ b/incubator/logstash/values.yaml
@@ -8,7 +8,7 @@ image:
   tag: 6.0.0
   pullPolicy: IfNotPresent
 service:
-  type: NodePort
+  type: ClusterIP
   internalPort: 1514
   ports:
     - name: "syslog-tcp"
