[stable/mysql] Add option to specify service type
The MySQL chart only allowed the service type to be ClusterIP,
preventing its use with Minikube. This patch adds the ability to create
the service with the `NodePort` type.

Drive-by:
* Update the `NOTES.txt` file to provide similar instructions to the
PostreSQL chart.

--- a/stable/mysql/templates/svc.yaml
+++ b/stable/mysql/templates/svc.yaml
@@ -8,9 +8,10 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
+  type: {{ .Values.service.type }}
   ports:
   - name: mysql
-    port: 3306
+    port: {{ .Values.service.port }}
     targetPort: mysql
   selector:
     app: {{ template "mysql.fullname" . }}
