--- a/stable/etcd-operator/templates/restore-operator-service-account.yaml
+++ b/stable/etcd-operator/templates/restore-operator-service-account.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.rbac.restoreOperatorServiceAccountName }}
+  name: {{ template "etcd-restore-operator.fullname" . }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     app: {{ template "etcd-restore-operator.name" . }}
