--- a/stable/etcd-operator/values.yaml
+++ b/stable/etcd-operator/values.yaml
@@ -6,9 +6,9 @@
 rbac:
   create: true
   apiVersion: v1beta1
-  etcdOperatorServiceAccountName: etcd-operator-sa
-  backupOperatorServiceAccountName: etcd-backup-operator-sa
-  restoreOperatorServiceAccountName: etcd-restore-operator-sa
+  etcdOperatorServiceAccountName: default
+  backupOperatorServiceAccountName: default
+  restoreOperatorServiceAccountName: default
 
 # Select what to deploy
 deployments:
