Move App Version to 1.8.1

--- a/incubator/busbar/templates/daemonset.yaml
+++ b/incubator/busbar/templates/daemonset.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1beta1
+apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: {{ template "kubeRegistry.fullname" . }}-internal
