Fix names for redis/mongodb

--- a/incubator/busbar/templates/busbar-web-deployment.yaml
+++ b/incubator/busbar/templates/busbar-web-deployment.yaml
@@ -35,9 +35,9 @@ spec:
           - name: PUBLIC_DOMAIN_NAME
             value: {{ .Values.publicDomainName }}
           - name: MONGODB_URL
-            value: mongodb://{{ template "mongodb.fullname" . }}/busbar
+            value: mongodb://{{ template "busbar.mongodb.fullname" . }}/busbar
           - name: REDIS_URL
-            value: redis://{{ template "redis.fullname" . }}:6379
+            value: redis://{{ template "busbar.redis.fullname" . }}:6379
           - name: SECRET_KEY_BASE
             value: {{ randAlphaNum 128 }}
         ports:
