--- a/incubator/busbar/templates/kuberegistry-daemonset.yaml
+++ b/incubator/busbar/templates/kuberegistry-daemonset.yaml
@@ -24,13 +24,13 @@ spec:
         - name: REGISTRY_STORAGE
           value: s3
         - name: REGISTRY_STORAGE_S3_ACCESSKEY
-          value: {{ .Values.registryStorageS3Accesskey }}
+          value: {{ .Values.kubeRegistry.StorageS3Accesskey }}
         - name: REGISTRY_STORAGE_S3_SECRETKEY
-          value: {{ .Values.registryStorageS3Secretkey }}
+          value: {{ .Values.kubeRegistry.StorageS3Secretkey }}
         - name: REGISTRY_STORAGE_S3_REGION
           value: us-east-1
         - name: REGISTRY_STORAGE_S3_BUCKET
-          value: {{ .Values.registryStorageS3Bucket }}
+          value: {{ .Values.kubeRegistry.StorageS3Bucket }}
         - name: REGISTRY_STORAGE_S3_SECURE
           value: "true"
         ports:
