--- a/incubator/busbar/values.yaml
+++ b/incubator/busbar/values.yaml
@@ -23,11 +23,11 @@ privateDomainName: private
 publicDomainName: example.com
 
 ## Private Registry
-registryStorageS3Accesskey: my_private_registry_s3_access_key
-registryStorageS3Secretkey: my_private_registry_s3_secret_key
-registryStorageS3Bucket: my_private_registry_s3_bucket
-
 kubeRegistry:
+  StorageS3Accesskey: my_private_registry_s3_access_key
+  StorageS3Secretkey: my_private_registry_s3_secret_key
+  StorageS3Bucket: my_private_registry_s3_bucket
+
   resources: {}
 #    limits:
 #      cpu: "1"
