--- a/incubator/zcashd/values.yaml
+++ b/incubator/zcashd/values.yaml
@@ -1,8 +1,9 @@
-image: "kuberstack/zcashd"
-imageTag: "latest"
-imagePullPolicy: IfNotPresent
+image:
+  repository: "kuberstack/zcashd"
+  tag: "latest"
+  pullPolicy: IfNotPresent
 
-RPCPort: 443
+rpcPort: 443
 
 ssl:
   enabled: true
@@ -24,10 +25,10 @@ persistence:
 ## Configure resource requests and limits
 ## ref: http://kubernetes.io/docs/user-guide/compute-resources/
 ##
-resources:
-  requests:
-    memory: 512Mi
-    cpu: 300m
+resources: {}
+#  requests:
+#    memory: 512Mi
+#    cpu: 300m
 
 # Custom zcashd configuration files used to override default zcashd settings
 configurationFiles:
