* Nesting using for "image" in values * Comment out defaults resource value * lower case letter for variables

--- a/incubator/bitcoincashd/templates/svc.yaml
+++ b/incubator/bitcoincashd/templates/svc.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ports:
   - name: rpc
-    port: {{ .Values.RPCPort }}
+    port: {{ .Values.rpcPort }}
     targetPort: rpc
   selector:
     app: {{ template "bitcoincashd.name" . }}
